WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271243
[GStreamer][WebRTC] webrtc/connection-state.html started failing after update to 1.24.0
https://bugs.webkit.org/show_bug.cgi?id=271243
Summary
[GStreamer][WebRTC] webrtc/connection-state.html started failing after update...
Philippe Normand
Reported
2024-03-19 08:29:20 PDT
--- /var/home/phil/WebKit/WebKitBuild/GTK/Release/layout-test-results/webrtc/connection-state-expected.txt +++ /var/home/phil/WebKit/WebKitBuild/GTK/Release/layout-test-results/webrtc/connection-state-actual.txt @@ -1,5 +1,5 @@ -PASS Checking various connection state for video exchange +FAIL Checking various connection state for video exchange assert_array_equals: lengths differ, expected array ["new", "gathering", "complete"] length 3, got ["new", "complete", "gathering", "complete"] length 4 PASS Checking connection state event when closing peer connetion
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2024-03-19 08:32:31 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26121
EWS
Comment 2
2024-03-19 08:35:56 PDT
Committed
276348@main
(74283d11a2d1): <
https://commits.webkit.org/276348@main
> Reviewed commits have been landed. Closing PR #26121 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-03-19 08:36:39 PDT
<
rdar://problem/125014192
>
Philippe Normand
Comment 4
2024-03-19 08:40:09 PDT
.
Philippe Normand
Comment 5
2024-03-19 09:23:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26125
EWS
Comment 6
2024-03-20 12:46:23 PDT
Committed
276412@main
(da50e63df7f3): <
https://commits.webkit.org/276412@main
> Reviewed commits have been landed. Closing PR #26125 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug